# plutus

./: .gitignore  Dockerfile  docker-compose.yaml  main.py  pyproject.toml
src/adapters/controllers/: __init__.py  process_billing_data_controller.py
src/adapters/extensions/base/: base_controller_extension.py
src/adapters/extensions/exceptions/: extension_base_exception.py  extension_exceptions.py  extension_exceptions_reasons_enum.py
src/adapters/extensions/process_billing/: process_billing_data_extension.py
src/adapters/ports/infrastructure/mongo_db/: i_mongo_db_collection.py  i_mongo_db_infrastructure.py
src/adapters/repositories/exceptions/: repository_exceptions.py  repository_exceptions_reasons_enum.py
src/adapters/repositories/mongo_db/: billing_data_repository.py
src/domain/entities/: billing_data_entity.py  billing_file_entity.py
src/domain/entities/value_objects/: date_entity.py  id_entity.py
src/domain/exceptions/: entity_base_exception.py  entity_exceptions.py  entity_exceptions_reasons_enum.py
src/domain/models/: billing_data_model.py
src/use_cases/: process_billing_data_use_case.py  send_billing_email_use_case.py
src/use_cases/data_types/: __init__.py
src/use_cases/data_types/responses/: process_billing_data_response.py
src/use_cases/exceptions/: use_case_base_exception.py  use_case_exceptions.py  use_case_exceptions_reasons_enum.py
src/use_cases/ports/services/: i_email__service.py
src/use_cases/ports/use_cases/: i_process_billing_data_use_case.py  i_send_billing_email_use_case.py
(+7 files in other folders)
